force-app/main/default/objects/ffr__ActionViewsSettings__c/ffr__ActionViewsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Action Views Settings</label>
</CustomObject>