force-app/main/default/objects/ffr__ActionViewsSettings__c/fields/ffr__FilterInquiryTemplatesInConfig__c.field-meta.xml
<CustomField>
    <fullName>ffr__FilterInquiryTemplatesInConfig__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When you configure an action views component in the related content pane editor, the list of action view templates only shows valid action view templates. Disable this setting to show all action view templates on your org. Your action views component&apos;s configuration is now quicker to load, but also includes action view templates that you cannot use.</description>
    <inlineHelpText>If performance is slow when you configure an action views component in the related content pane editor, then disable this custom setting. The action view template picklist will now show all action view templates on your org.</inlineHelpText>
    <label>Filter Action View Templates in Config</label>
    <type>Checkbox</type>
</CustomField>