force-app/main/default/objects/ffr__ActionViewsSettings__c/fields/ffr__HideSummarizedDataNotification__c.field-meta.xml
<CustomField>
    <fullName>ffr__HideSummarizedDataNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Summarized Data Notification</label>
    <type>Checkbox</type>
</CustomField>