force-app/main/default/objects/ffr__ActionViewsSettings__c/fields/ffr__MassDeleteQueueableSize__c.field-meta.xml
<CustomField>
    <fullName>ffr__MassDeleteQueueableSize__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Queueable size - Mass Delete batch</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>