force-app/main/default/objects/ffr__ActionViewsSettings__c/fields/ffr__MassDeleteScopeSize__c.field-meta.xml
<CustomField>
    <fullName>ffr__MassDeleteScopeSize__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Scope size - Mass Delete batch</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>